versions/v2.8/modules/en/pages/rancher-admin/rancher-admin.adoc
= Authentication, Permissions and Global Settings
:page-languages: [en, zh]
:revdate: 2025-05-15
:page-revdate: {revdate}

After installation, the xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[system administrator] should configure Rancher to configure authentication, authorization, security, default settings, security policies, drivers and global DNS entries.

== First Log In

After you log into Rancher for the first time, Rancher will prompt you for a *Rancher Server URL*. You should set the URL to the main entry point to the Rancher Server. When a load balancer sits in front a Rancher Server cluster, the URL should resolve to the load balancer. The system will automatically try to infer the Rancher Server URL from the IP address or host name of the host running the Rancher Server. This is only correct if you are running a single node Rancher Server installation. In most cases, therefore, you need to set the Rancher Server URL to the correct value yourself.

[WARNING]
====

After you set the Rancher Server URL, we do not support updating it. Set the URL with extreme care.
====


== Authentication

One of the key features that Rancher adds to Kubernetes is centralized user authentication. This feature allows to set up local users and/or connect to an external authentication provider. By connecting to an external authentication provider, you can leverage that provider's user and groups.

For more information how authentication works and how to configure each provider, see xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[Authentication].

== Authorization

Within Rancher, each person authenticates as a _user_, which is a login that grants you access to Rancher. Once the user logs in to Rancher, their _authorization_, or their access rights within the system, is determined by the user's role. Rancher provides built-in roles to allow you to easily configure a user's permissions to resources, but Rancher also provides the ability to customize the roles for each Kubernetes resource.

For more information how authorization works and how to customize roles, see xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc[Roles Based Access Control (RBAC)].

== User Retention

In Rancher v2.8.5 and later, you can enable user retention. This feature automatically removes inactive users after a configurable period of time.

The user retention feature is disabled by default.

For more information, see xref:rancher-admin/users/authn-and-authz/enable-user-retention.adoc[Enabling User Retention].

== Pod Security Policies

_Pod Security Policies_ (or PSPs) are objects that control security-sensitive aspects of pod specification, e.g. root privileges. If a pod does not meet the conditions specified in the PSP, Kubernetes will not allow it to start, and Rancher will display an error message.

For more information how to create and use PSPs, see xref:security/psp/create.adoc[Pod Security Policies].

== Provisioning Drivers

Drivers in Rancher allow you to manage which providers can be used to provision xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters] or xref:cluster-deployment/infra-providers/infra-providers.adoc[nodes in an infrastructure provider] to allow Rancher to deploy and manage Kubernetes.

For more information, see xref:rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc[Provisioning Drivers].

== Adding Kubernetes Versions into Rancher

With this feature, you can upgrade to the latest version of Kubernetes as soon as it is released, without upgrading Rancher. This feature allows you to easily upgrade Kubernetes patch versions (i.e. `v1.15.X`), but not intended to upgrade Kubernetes minor versions (i.e. `v1.X.0`) as Kubernetes tends to deprecate or add APIs between minor versions.

The information that Rancher uses to provision xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE clusters] is now located in the Rancher Kubernetes Metadata. For details on metadata configuration and how to change the Kubernetes version used for provisioning RKE clusters, see xref:cluster-admin/backups-and-restore/backups-without-uprading-rancher.adoc[Rancher Kubernetes Metadata.]

Rancher Kubernetes Metadata contains Kubernetes version information which Rancher uses to provision xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE clusters].

For more information on how metadata works and how to configure metadata config, see xref:cluster-admin/backups-and-restore/backups-without-uprading-rancher.adoc[Rancher Kubernetes Metadata].

== Global Settings

Options that control certain global-level Rancher settings are available from the top navigation bar.

Click *☰* in the top left corner, then select *Global Settings*, to view and configure the following settings:

* *Settings*: Various Rancher defaults, such as the minimum length for a user's password (`password-min-length`). You should be cautious when modifying these settings, as invalid values may break your Rancher installation.
* *Feature Flags*: Rancher features that can be toggled on or off. Some of these flags are for <<_enabling_experimental_features,experimental features>>.
* *Banners*: Elements you can add to fixed locations on the portal. For example, you can use these options to xref:./global-configuration/custom-branding.adoc#_fixed_banners[set a custom banner] for users when they login to Rancher.
* *Branding*: Rancher UI design elements that you can xref:rancher-admin/global-configuration/custom-branding.adoc[customize]. You can add a custom logo or favicon, and modify UI colors.
* *Performance*: Performance settings for the Rancher UI, such as incremental resource loading.
* *Home Links*: Links displayed on the Rancher UI *Home* page. You can modify visibility for the default links or add your own links.

=== Enabling Experimental Features

Rancher includes some features that are experimental and/or disabled by default. Feature flags allow you to enable these features. For more information, refer to the section about xref:rancher-admin/experimental-features/experimental-features.adoc[feature flags.]

=== Global Configuration

*Global Configuration* options aren't visible unless you activate the *legacy* xref:rancher-admin/experimental-features/experimental-features.adoc[feature flag]. The *legacy* flag is disabled by default on fresh Rancher installs of v2.6 and later. If you upgrade from an earlier Rancher version, or activate the *legacy* feature flag on Rancher v2.6 and later, *Global Configuration* is available from the top navigation menu:

. Click *☰* in the top left corner.
. Select *Global Configuration* from the *Legacy Apps*.

The following features are available under *Global Configuration*:

* *Catalogs*
* *Global DNS Entries*
* *Global DNS Providers*

As these are legacy features, please see the Rancher v2.0--v2.4 docs on xref:[catalogs], xref:/versioned_docs/version-2.0-2.4/how-to-guides/new-user-guides/helm-charts-in-rancher/globaldns.adoc#_adding_a_global_dns_entry[global DNS entries], and xref:/versioned_docs/version-2.0-2.4/how-to-guides/new-user-guides/helm-charts-in-rancher/globaldns.adoc#_editing_a_global_dns_provider[global DNS providers] for more details.
